<resources>
    <string name="app_name">DataPro Collect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">\@</string>
    <string name="nav_header_subtitle">Account</string>
    <string name="nav_header_desc">Account Desc</string>

    <string name="menu_auth_action_connection">Connection</string>
    <string name="menu_auth_action_join">Join US</string>
    <string name="menu_main_action_logout">Logout</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="dark_mode">Dark Mode</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Fragments Strings -->
    <string name="fragment_login_title">Login</string>
    <string name="fragment_forgot_password_title">Forgot Password</string>
    <string name="fragment_onboarding_title">Start</string>
    <string name="fragment_home_title">Home</string>

    <!-- Actions Strings -->
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_progress">Logging in</string>
    <string name="action_sign_in_failed">Login failed</string>
    <string name="action_sign_in_success">Login Successful</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_proceed_with_google">Proceed with Google</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_recover_account">Recover Account</string>
    <string name="action_goto_login">Back to Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="google_maps_api_key">AIzaSyB1Kfvlg6orolTJR4QIvC4hgiQJeQqNhlQ</string>
    <string name="facebook_app_id">2136935373279389</string>
    <string name="tracking_enabled_notification">Tracking is currently enabled. Tap to cancel.</string>
    <string name="admin_email">mutugi@realfield.com</string>
    <string name="admin_password">ReCasp$$99$</string>
    <string name="firebase_path">location</string>
    <string name="permission_rationale">Please grant location permission to start the Realfield service</string>
    <string name="permission_denied_explanation">You have not granted location permission. So the service cannot be started.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string description="The content description of bottom sheet drag handles [CHAR LIMIT=NONE]" name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string description="A description of an accessibility action to expand the bottom sheet [CHAR LIMIT=NONE]" name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string description="A description of an accessibility action to collapse the bottom sheet [CHAR LIMIT=NONE]" name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string description="An accessibility feedback when the bottom sheet drag handle is clicked [CHAR LIMIT=NONE]" name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
</resources>